--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "gulp-open": "^1.0.0",
     "jquery": "^3.0.0",
     "lodash": "^4.13.1",
-    "react": "0.13.3",
-    "react-router": "0.13.3",
+    "react": "^15.2.0",
+    "react-dom": "^15.2.0",
+    "react-router": "^2.5.2",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0"
   }
